--- a/Dünyanın Sonu.css
+++ b/Dünyanın Sonu.css
@@ -8,7 +8,7 @@ width: 80%;
 max-width: 400px;
 height: 100px;
 transform:translateX(-50%);
-background: burlywood;
+background: rgb(0, 0, 0);
 border-radius: 10px;
 box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 
@@ -22,6 +22,7 @@ position: fixed;
 top: calc(30% + 100px);
 left: 50%;
 transform: translateX(-50%);
+
 }
 button{
     width: 50px;
@@ -33,8 +34,8 @@ button{
     font-size: 2rem;
     margin: 20px;
     color: azure;
-    opacity: 0.8;
-    
+    opacity: 0.5;
+    transition: all 0.3s ease-out;
 
 }
 
